@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid race condition between saving changes and failover cron job
 4.2
 	+ Update version to 4.2
 4.1.1
